// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders VenueWidget with venue set, exact location 1`] = `
<div>
  <fieldset
    class="memori--venue-widget"
  >
    <legend
      class="sr-only"
    >
      Venue
    </legend>
    <div
      class="memori--venue-widget__form-item memori--venue-widget__controls"
    >
      <div
        class="memori--venue-widget__geosuggest"
      >
        <div
          class="memori--venue-widget__search-wrap"
        >
          <div
            class="memori--venue-widget-search"
          >
            <input
              class="memori-input memori-input--default memori-input--md"
              id="base-ui-:r1:"
              placeholder="searchVenue"
              value="Altedo, Bologna, Italy"
            />
          </div>
        </div>
        <button
          class="memori-button memori-button--primary memori-button--md memori--venue-widget__gps-button"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.useMyPosition
          </span>
        </button>
      </div>
      <div
        class="memori--venue-widget__actions"
      >
        <button
          class="memori-button memori-button--outline memori-button--md memori--venue-widget__no-location-button"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.dontWantToProvidePosition
          </span>
        </button>
      </div>
    </div>
    <div
      class="memori--venue-widget__form-item memori--venue-widget__map-section"
    >
      <p
        class="memori--venue-widget__place-name"
      >
        <strong>
          venue
        </strong>
        : 
        Altedo, Bologna, Italy
      </p>
      <div
        class="memori--venue-widget__map-container"
      >
        <div
          data-testid="MapContainer"
        >
          <div
            data-testid="TileLayer"
          />
          <div
            data-testid="Marker"
          >
            <div
              data-testid="Popup"
            />
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`renders VenueWidget with venue set, with uncertainty radius 1`] = `
<div>
  <fieldset
    class="memori--venue-widget"
  >
    <legend
      class="sr-only"
    >
      Venue
    </legend>
    <div
      class="memori--venue-widget__form-item memori--venue-widget__controls"
    >
      <div
        class="memori--venue-widget__geosuggest"
      >
        <div
          class="memori--venue-widget__search-wrap"
        >
          <div
            class="memori--venue-widget-search"
          >
            <input
              class="memori-input memori-input--default memori-input--md"
              id="base-ui-:r2:"
              placeholder="searchVenue"
              value="Altedo, Bologna, Italy"
            />
          </div>
        </div>
        <button
          class="memori-button memori-button--primary memori-button--md memori--venue-widget__gps-button"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.useMyPosition
          </span>
        </button>
      </div>
      <div
        class="memori--venue-widget__actions"
      >
        <button
          class="memori-button memori-button--outline memori-button--md memori--venue-widget__no-location-button"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.dontWantToProvidePosition
          </span>
        </button>
      </div>
    </div>
    <div
      class="memori--venue-widget__form-item memori--venue-widget__map-section"
    >
      <p
        class="memori--venue-widget__place-name"
      >
        <strong>
          venue
        </strong>
        : 
        Altedo, Bologna, Italy
      </p>
      <div
        class="memori--venue-widget__map-container"
      >
        <div
          data-testid="MapContainer"
        >
          <div
            data-testid="TileLayer"
          />
          <div
            data-testid="Marker"
          >
            <div
              data-testid="Popup"
            />
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`renders VenueWidget without gps button unchanged 1`] = `
<div>
  <fieldset
    class="memori--venue-widget"
  >
    <legend
      class="sr-only"
    >
      Venue
    </legend>
    <div
      class="memori--venue-widget__form-item memori--venue-widget__controls"
    >
      <div
        class="memori--venue-widget__geosuggest"
      >
        <div
          class="memori--venue-widget__search-wrap"
        >
          <div
            class="memori--venue-widget-search"
          >
            <input
              class="memori-input memori-input--default memori-input--md"
              id="base-ui-:r4:"
              placeholder="searchVenue"
              value="Altedo, Bologna, Italy"
            />
          </div>
        </div>
      </div>
      <div
        class="memori--venue-widget__actions"
      >
        <button
          class="memori-button memori-button--outline memori-button--md memori--venue-widget__no-location-button"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.dontWantToProvidePosition
          </span>
        </button>
      </div>
    </div>
    <div
      class="memori--venue-widget__form-item memori--venue-widget__map-section"
    >
      <p
        class="memori--venue-widget__place-name"
      >
        <strong>
          venue
        </strong>
        : 
        Altedo, Bologna, Italy
      </p>
      <div
        class="memori--venue-widget__map-container"
      >
        <div
          data-testid="MapContainer"
        >
          <div
            data-testid="TileLayer"
          />
          <div
            data-testid="Marker"
          >
            <div
              data-testid="Popup"
            />
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`renders VenueWidget without uncertainty unchanged 1`] = `
<div>
  <fieldset
    class="memori--venue-widget"
  >
    <legend
      class="sr-only"
    >
      Venue
    </legend>
    <div
      class="memori--venue-widget__form-item memori--venue-widget__controls"
    >
      <div
        class="memori--venue-widget__geosuggest"
      >
        <div
          class="memori--venue-widget__search-wrap"
        >
          <div
            class="memori--venue-widget-search"
          >
            <input
              class="memori-input memori-input--default memori-input--md"
              id="base-ui-:r3:"
              placeholder="searchVenue"
              value="Altedo, Bologna, Italy"
            />
          </div>
        </div>
        <button
          class="memori-button memori-button--primary memori-button--md memori--venue-widget__gps-button"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.useMyPosition
          </span>
        </button>
      </div>
      <div
        class="memori--venue-widget__actions"
      >
        <button
          class="memori-button memori-button--outline memori-button--md memori--venue-widget__no-location-button"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.dontWantToProvidePosition
          </span>
        </button>
      </div>
    </div>
    <div
      class="memori--venue-widget__form-item memori--venue-widget__map-section"
    >
      <p
        class="memori--venue-widget__place-name"
      >
        <strong>
          venue
        </strong>
        : 
        Altedo, Bologna, Italy
      </p>
      <div
        class="memori--venue-widget__map-container"
      >
        <div
          data-testid="MapContainer"
        >
          <div
            data-testid="TileLayer"
          />
          <div
            data-testid="Marker"
          >
            <div
              data-testid="Popup"
            />
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`renders empty VenueWidget unchanged 1`] = `
<div>
  <fieldset
    class="memori--venue-widget"
  >
    <legend
      class="sr-only"
    >
      Venue
    </legend>
    <div
      class="memori--venue-widget__form-item memori--venue-widget__controls"
    >
      <div
        class="memori--venue-widget__geosuggest"
      >
        <div
          class="memori--venue-widget__search-wrap"
        >
          <div
            class="memori--venue-widget-search"
          >
            <input
              class="memori-input memori-input--default memori-input--md"
              id="base-ui-:r0:"
              placeholder="searchVenue"
              value=""
            />
          </div>
        </div>
        <button
          class="memori-button memori-button--primary memori-button--md memori--venue-widget__gps-button"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.useMyPosition
          </span>
        </button>
      </div>
      <div
        class="memori--venue-widget__actions"
      >
        <button
          class="memori-button memori-button--outline memori-button--md memori--venue-widget__no-location-button"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.dontWantToProvidePosition
          </span>
        </button>
      </div>
    </div>
    <div
      class="memori--venue-widget__form-item memori--venue-widget__map-section"
    >
      <div
        class="memori--venue-widget__map-container"
      >
        <div
          data-testid="MapContainer"
        >
          <div
            data-testid="TileLayer"
          />
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;
